	Remove.
	* tp/tests/contents/res_parser: Remove results files for removed
	tests.
	* doc/texinfo.texi (Command List, Obsolete @-Commands): Move
	@refill to Obsolete @-Commands.  Update documentation of
	@setcontentsaftertitlepage.
	* NEWS: Update.
	* doc/refcard/txirefcard.tex: Remove documentation of deprecated
	commands.

2020-11-14  Patrice Dumas  <pertusus@free.fr>

	Use OUTPUT_CONTENTS_LOCATION for HTML

	* tp/Texinfo/Convert/HTML.pm (%defaults,
	_convert_informative_command, _contents_shortcontents_in_title,
	_default_titlepage, _print_title, _prepare_contents_elements,
	_convert, _set_variables_texi2html),
	tp/Texinfo/Common.pm (@variable_string_settables),
	doc/texinfo.texi (HTML Customization Variables),
	texi2oldapi.texi, tp/init/book.pm, tp/tests/contents/list-of-tests:
	Replace INLINE_CONTENTS by OUTPUT_CONTENTS_LOCATION set to 
	"at_commands", INLINE_CONTENTS unset becomes "separate_element".
	Add "after_title" as a possibility for OUTPUT_CONTENTS_LOCATION
	using the code that corresponded to @setcontentaftertitlepage
	before the @-command was removed.

2020-11-14  Gavin Smith  <gavinsmith0123@gmail.com>

	Simplify little-used "markup style" infrastructure.
	
	* doc/texinfo.tex (\currentmarkupstyle, \setupmarkupstyle)
	(\markupsetuplqdefault, \markupsetuprqdefault): Remove.
	(\setcodequotes, \setregularquotes): Replacements.
	* doc/texinfo.texi (Inserting Quote Characters):
	Do not say that the command interface is preferred.

2020-11-13  Gavin Smith  <gavinsmith0123@gmail.com>

	Avoid excess vertical space above @displaymath.
	
	* doc/texinfo.tex (\displaymath): Avoid active newlines in macro
	definition.  These led to \par tokens which in turn led to extra
	vertical space above the block.  Report by Christopher Dimech.

2020-11-13  Gavin Smith  <gavinsmith0123@gmail.com>

	Fix \eqno in @displaymath.
	
	* doc/texinfo.tex (\end): Do not exit math mode (reverts previous
	change).
	(\displaymath): Temporarily redefine @end to insert $$ immediately,